--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-scraper = "0.14.0"
-reqwest =  {version ="0.11.14", features = ["blocking"]}
+rss = "2.0.2"
+reqwest =  {version ="0.11.14"}
 tokio = { version = "1.25.0", features = ["full"] }
+whatlang = "0.16.2"
